# UB_hackathon

./: .gitignore
local-warmth-tracker-main/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
local-warmth-tracker-main/src/: App.tsx  index.css  main.tsx  main.tsx~
local-warmth-tracker-main/src/components/: AuthButtons.tsx  GlassCard.tsx
local-warmth-tracker-main/src/pages/: AreaSelection.tsx  Dashboard.tsx  Login.tsx  Login.tsx~
myproject/: pyproject.toml  pyproject.toml_bkp
myproject/hackathon/: settings.py  urls.py
myproject/sensor_app/: apps.py  models.py  urls.py  views.py  views.py_bkp
myproject/sensor_app/management/commands/: fetch_data.py
myproject/sensor_app/migrations/: 0001_initial.py  0002_device_delete_atmosphere_buildings_device.py  0003_buildings_timestamp.py
myproject/sensor_app/templates/: dashboard.html  login.html
myproject/staticfiles/: index.html
myproject/staticfiles/assets/: index-BM7bu9zu.js  index-C8agpj0f.js  index-Dpb6R3Yi.css
