[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Jay Pathare",email = "jaypathare123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-allauth (>=65.13.0,<66.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
